# stm32f4xx

./: CMakeLists.txt  LICENSE.md  README.md  arm-none-eabi.cmake  syscalls.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt  dsp_lib.cmake
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt  Sources.cmake
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_conf_template.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
Middlewares/ST/: README.md
cmake/: FindOpenOCD.cmake  arm-none-eabi.cmake  gdbinit  stm32f4xx.ld
